renamed globals added name to ep1_2.* resolved paths for ep1_2.Janus changed MyMath to specs changed PalindromGenerator to spec