@@ -1,11 +1,14 @@
+/*
+ * Copyright (c) 2022. Alexander Riedel
+ */
+
 package de.alex.Studium.ep1_2;
 
-import de.alex.Studium.ep1_1.globals;
+import de.alex.Studium.Lib;
 
 import javax.swing.*;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Comparator;
 import java.util.List;
@@ -22,13 +25,13 @@ public class FileMirror {
             List<String> fs2;
             if(!fs1.isEmpty()){
                 fs2= fs1.stream().sorted(Comparator.comparingInt(fs1::indexOf)).collect(Collectors.toList());
-                fs2.replaceAll(globals::invert_char);
+                fs2.replaceAll(Lib::invert_char);
                 StringBuilder c2 = new StringBuilder();
                 for (String s : fs2) {
                     if(!c2.toString().equals(""))c2.append("\n");
                     c2.append(s);
                 }
-                Files.write(f2.toPath(),c2.toString().getBytes(StandardCharsets.UTF_8));
+                Files.writeString(f2.toPath(),c2.toString());
             }
         }else{
             JOptionPane.showMessageDialog(null,"file 1 or 2 is invalid");
